2005-11-01  Damien Sandras  <dsandras@gnome.org>

	* src/callbacks.cpp src/callbacks.h src/chat_window.cpp 
	src/chat_window.h src/endpoint.cpp src/endpoint.h 
	src/main_window.cpp src/urlhandler.cpp: Use the new GmConnectButton 
	widget. Added status bar and connect button to the chat window. 
	Display connection messages in the chat window status bar.

2005-11-01  Julien Puydt  <jpuydt@free.fr>

	* src/dbus_component.cpp: Implemented the GetName method of the
	net.gnomemeeting.self interface.

2005-11-01  Julien Puydt  <jpuydt@free.fr>

	* net.gnomemeeting.accounts.service.in,
	net.gnomemeeting.calls.service.in, net.gnomemeeting.self.service.in:
	Removed... it's a service file per service, not per interface !
	* net.gnomemeeting.instance.service.in: New ; declares the right
	service.
	* configure.in, Makefile.am: Modified to handle the right service
	files.

2005-11-01  Damien Sandras  <dsandras@gnome.org>
	
	* lib/widgets/Makefile.am lib/widgets/gmstatusbar.h 
	lib/widgets/gmstatusbar.c: Added support for a GmStatusbar able to 
	display flash, info and normal messages.

2005-11-01  Damien Sandras  <dsandras@gnome.org>

	* lib/widgets/Makefile.am src/main_window.cpp 
	lib/widgets/connectbutton.c lib/widgets/connectbutton.h:
	Added connectbutton GMWidget and make use of it.

2005-11-01  Julien Puydt  <jpuydt@free.fr>

	* lib/contacts/gm_contacts-remote.cpp
	(gnomemeeting_remote_addressbook_get_contacts): Fixed a "control
	reaches end of non-void function" warning.

2005-11-01  Damien Sandras  <dsandras@gnome.org>
	
	* src/urlhandler.cpp: Fixed callto bug.

2005-11-01  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-eds.cpp: Removed unuseful call to function.

	* src/addressbook_window.cpp src/addressbook_window.h 
	src/callbacks.cpp src/callbacks.h src/calls_history_window.cpp 
	src/chat_window.cpp src/chat_window.h src/endpoint.cpp 
	src/gnomemeeting.cpp src/main_window.cpp src/sipendpoint.cpp 