@@ -1,3 +1,8 @@
+2005-11-02  Julien Puydt  <jpuydt@free.fr>
+
+	* src/dbus_component.cpp: Implemented the GetComment and GetLocation
+	methods of the net.gnomemeeting.self interface.
+
 2005-11-01  Damien Sandras  <dsandras@gnome.org>
 
 	* src/callbacks.cpp src/callbacks.h src/chat_window.cpp 
